# deformation-inversion-layer

./: .gitignore  .pylintrc  DESCRIPTION.md  LICENSE  README.md  description.md  environment.yml  pyproject.toml  setup.py  tutorial.ipynb
docs/: fixed_point_invert_deformation.html  fixed_point_iteration.html  interface.html
docs/deformation_inversion_layer/: index.html  interface.html
docs/interpolator/: algorithm.html  index.html  wrapper.html
src/deformation_inversion_layer/: __init__.py  fixed_point_invert_deformation.py  fixed_point_iteration.py  interface.py
src/deformation_inversion_layer/interpolator/: __init__.py  algorithm.py  wrapper.py
tests/: fixed_point_solver_test.py  interpolator_test.py  invert_deformation_test.py  shape_test_util.py
tutorials/: quick_start.ipynb
